
[TestParseCss/css_modules/path_is_not_a_css_module - 1]
.title {
    color: green;
}

---

[TestParseCss/css_modules/should_rename_classes - 1]
.title43c30152 {
    color: green;
}

---

[TestParseCss/css_modules/should_rename_nested_classes - 1]
.title43c30152 {
    color: green;
    .subtitle43c30152 {
        color: blue;
    }
}

---

[TestParseCss/css_modules/should_rename_compound_classes - 1]
.title43c30152.subtitle43c30152 {
    color: green;
}

---

[TestParseCss/css_modules/global_function/should_not_rename_function_argument - 1]
.title43c30152 {
    color: blue;
}
.subtitle {
    color: green;
}
.author43c30152 {
    color: red;
}

---

[TestParseCss/css_modules/global_function/nesting_in_function_body_should_be_renamed - 1]
.subtitle {
    color: green;
    .foo43c30152 {
        color: orange;
    }
}

---

[TestParseCss/css_modules/global_function/shorthand_with_argument/body_should_be_renamed - 1]
 .subtitle {
    color: green;
    .foo {
        color: orange;
    
}

---

[TestParseCss/css_modules/global_function/should_not_rename_argument - 1]
.title43c30152 {
    color: blue;
}
.subtitle {
    color: green;
}
.author43c30152 {
    color: red;
}

---

[TestParseCss/css_modules/global_function/nested_classes_should_be_renamed - 1]
.subtitle {
    color: green;
    .foo43c30152 {
        color: orange;
    }
}

---

[TestParseCss/css_modules/global_shorthand_with_argument/should_not_rename_argument - 1]
.title43c30152 {
    color: blue;
}
 .subtitle 
    color: green;
}
.author43c30152 {
    color: red;
}

---

[TestParseCss/css_modules/global_shorthand_with_argument/nested_classes_should_be_renamed - 1]
 .subtitle 
    color: green;
    .foo43c30152 {
        color: orange;
    }
}

---

[TestParseCss/css_modules/global_shorthand_without_argument/should_rename_all_children - 1]
 
    .subtitle {
        color: green;

        .foo {
            color: orange;
        }
    }
    .bar {
        color: blue;
    }
}
.author43c30152 {
    color: red;
}

---
